--- a/src/components/Login.module.css
+++ b/src/components/Login.module.css
@@ -1,5 +1,4 @@
 
-
 .background{
     position: fixed;
     top: 0;
@@ -8,22 +7,27 @@
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.476);
     backdrop-filter: blur(15px);
-    
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 
+
 }
 
 .form{
-    background-color: rgb(255, 255, 255);
+    background-color: aliceblue;
     height: 60vh;
-    width: 20%;
+    width: 350px;
     border-radius: 20px;
-
     animation: animate-in 1s ease-out forwards; 
+    position: relative;
+    overflow: hidden;
+    z-index: 2;
+   
 }
+
 
 .close{
     width: 30px;
@@ -32,7 +36,7 @@
     background-color: rgb(189, 189, 189);
     /* border: 3px solid rgb(9, 56, 156); */
     color: rgb(75, 75, 75);
-    size: 10x;
+    size: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -54,6 +58,188 @@
     
   
 }
+
+.formContainer{
+    display: flex;
+    flex-direction: column;
+    justify-content:flex-start;
+    align-items:center;
+    inset: 4px;
+    z-index: 2;
+}
+
+.formContainer h2{
+    letter-spacing: 0.1rem;
+}
+
+.inputBox{
+    position: relative;
+    width: 300px;
+    margin-top: 25px;
+}
+
+.inputBox input{
+    position: relative;
+    width: 90%;
+    padding: 20px 10px 10px;
+    background: transparent;
+    outline: none;
+    border: none;
+    font-size: 1em;
+    letter-spacing: 0.05em;
+    transition: 0.5s;
+    z-index: 10;
+
+}
+
+.inputBox span{
+    position: absolute;
+    left: 0;
+    padding: 20px 0px 10px;
+    color: #212121;
+    font-size: 1em;
+    letter-spacing: 0.05em;
+    transition: 0.5s;
+}
+
+.inputBox input:valid ~ span,
+.inputBox input:focus ~ span
+{
+    color: #feb206;
+    font-size: 0.75em;
+    transform: translateY(-34px);
+}
+
+.inputBox i{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 2px;
+    background:#4747473a;
+    border-radius: 4px;
+    overflow: hidden;
+    transition: 0.5s;
+   
+
+}
+
+.inputBox:hover{
+    cursor: pointer;
+   
+}
+
+.inputBox input:valid ~ i,
+.inputBox input:focus ~ i
+{
+    height: 44px;
+
+}
+
+.links{
+    padding-top: 5%;
+    width: 70%;
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+.links a{
+    margin: 10px 0;
+    font-size: 0.75em;
+    color: #212121;
+    text-decoration: none;
+
+}
+
+.links a:hover{
+
+    color: #feb206;
+}
+
+.girisButton{
+    width: fit-content;
+    height: fit-content;
+    border: none;
+    padding: 1rem 2rem;
+    border-radius: 10px;
+    background-color: #feb206;
+    color: antiquewhite;
+    font-size: 15px;
+    font-weight: 600;
+}
+
+.buttonContainer{
+    padding-top: 10%;
+    height: 200%;
+    /* width: 90%; */
+    
+}
+
+.buttonContainer :hover{
+    cursor: pointer;
+    box-shadow: 0px 0px 10px rgb(103, 103, 103);
+    transform: scale(1.05);
+    
+    
+}
+
+.roleBox{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+
+}
+
+.selectRole{
+    position: relative;
+    height: 6rem;
+    width: 6rem;
+    margin-top: 1rem;
+
+}
+
+.selectRole input{
+    position: absolute;
+    height: 50%;
+    width: 50%;
+    cursor: pointer;
+    z-index: 2;
+    opacity: 0;
+
+}
+
+.selectRole .inputTitle{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 65%;
+    width: 65%;
+    border: 2px solid #feb206;
+    border-radius: 15px;
+}
+
+input:checked + .inputTitle{
+    background-color: #feb206;
+    box-shadow: 0px 0px 10px #212121;
+    transform: scale(1.1);
+
+}
+
+input:hover + .inputTitle{
+    box-shadow: 0px 0px 10px #212121;
+
+}
+
+input:checked + .inputTitle .icon,
+input:checked + .inputTitle label{
+    color:aliceblue !important;
+}
+
+
+
 
 @keyframes animate-in {
     from {
