--- a/src/components/CourseCard.module.css
+++ b/src/components/CourseCard.module.css
@@ -1,8 +1,122 @@
 
 .cardContainer{
-    width: 15vw;
-    height: 20vw;
-    background-color: rgb(174, 174, 174);
+    display: flex;
+    flex-direction: column;
+    align-items: center ;
+    width: 250px;
+    height: 450px;
+    background-color: rgb(165, 170, 188);
     margin: 10px;
     border-radius: 15px;
+}
+
+.teacherNameImage{
+    width: 85%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    
+    
+}
+
+.teacherImage:hover{
+    cursor: pointer;
+}
+.teacherName{
+    margin-top: 1rem;
+    margin-right: 1rem;
+   
+}
+
+.teacherImage{
+    margin-top: 1rem;
+    width: 25%;
+    height: 50%;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.courseImage{
+    object-fit:scale-down;
+    width: 90%;
+    height: 45%;
+    background-color: aliceblue;
+    margin-top: 0.5rem;
+    border-radius: 10px;
+}
+
+.departmentInfos{
+    display: flex;
+    justify-content: space-between;
+    align-items:center;
+    margin-top: 0.5rem;
+    width: 85%;
+    padding-bottom: 3px;
+    border-bottom: 2px solid rgb(13, 82, 201);
+
+    
+}
+
+.courseDepartment{
+    font-size: 17px;
+    font-weight: 500;
+}
+.period{
+    font-size: 14px;
+    font-weight: 700;
+    background-color: rgb(12, 127, 228);
+    color: aliceblue;
+    padding: 0.25rem;
+    border-radius: 5px;
+    width: fit-content;
+    height: fit-content;
+}
+.courseTitle{
+    font-size: 15px;
+    font-weight: 500;
+}
+
+.kontenjan{
+    background-color: rgb(211, 15, 28);
+    color: aliceblue;
+    width: fit-content;
+    height: fit-content;
+    font-size: 14px;
+    font-weight: 700;
+    padding: 0.15rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+}
+
+.courseInfo{
+    margin-top: 1rem;
+    width: 85%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.addButton{
+    background-color:rgb(17, 112, 200) ;
+    width: 85%;
+    height: 7%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 1.5rem;
+    margin-bottom: 0.5rem;
+    border-radius: 15px;
+    color: aliceblue;
+    font-size: 15px;
+    font-weight: 500;
+}
+
+.addButton:hover{
+    cursor: pointer;
+    
 }
