--- a/src/components/CourseCard.module.css
+++ b/src/components/CourseCard.module.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center ;
     width: 250px;
-    height: 450px;
+    height: 470px;
     background-color: rgb(165, 170, 188);
     margin: 10px;
     border-radius: 15px;
@@ -12,6 +12,7 @@
 
 .teacherNameImage{
     width: 85%;
+    height: 20%;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -31,8 +32,8 @@
 
 .teacherImage{
     margin-top: 1rem;
-    width: 20%;
-    height: 50%;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -54,6 +55,7 @@
     align-items:center;
     margin-top: 0.5rem;
     width: 85%;
+    height: 10%;
     padding-bottom: 3px;
     border-bottom: 2px solid rgb(13, 82, 201);
 
