--- a/src/components/UserInfos.module.css
+++ b/src/components/UserInfos.module.css
@@ -6,7 +6,7 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    background-color: rgba(154, 154, 154, 0.412);
+    background-color: #f4f6f868;
     /* backdrop-filter: blur(10px); */
     display: flex;
     flex-direction: column;
@@ -15,8 +15,79 @@
 }
 
 .container{
-    margin:6rem 1rem;
+  
     width: 15%;
-    height: 50%;
-    background-color: rgb(135, 4, 4);
+    height: 100%;
+    background-color: rgb(255, 255, 255);
+    border-bottom-left-radius: 15px;
+    border-top-left-radius: 15px;
+}
+
+.closeContainer{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0px 5px;
+    
+}
+
+.close{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: rgb(189, 189, 189);
+    color: rgb(75, 75, 75);
+    size: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem 0.5rem;
+}
+
+.close :hover{
+    cursor: pointer;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: red;
+    color: aliceblue;
+    
+  
+}
+
+.userNameImage{
+    display: flex;
+
+}
+
+.userImage{
+    background-color: bisque;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.names{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:flex-start;
+    margin-left: 5px;
+}
+
+.userName{
+    font-size: 12px;
+    font-weight: 500;
+
+}
+
+.realName{
+    font-size: 14px;
+    color: rgb(114, 114, 114);
+
 }
