profil bilgileri sayfası oluşturuldu

--- a/src/components/CourseCard.module.css
+++ b/src/components/CourseCard.module.css
@@ -5,7 +5,7 @@
     align-items: center ;
     width: 250px;
     height: 470px;
-    background-color: rgb(165, 170, 188);
+    background-color: rgb(210,213,222);
     margin: 10px;
     border-radius: 15px;
 }
