--- a/src/screens/students/components/StuHero.module.css
+++ b/src/screens/students/components/StuHero.module.css
@@ -12,5 +12,5 @@ body{
     padding: 0;
     width: 99vw;
     height: 70vh;
-    background-color: bisque;
+    background-color: rgb(210,213,222)
 }
