--- a/src/components/UserInfos.module.css
+++ b/src/components/UserInfos.module.css
@@ -16,7 +16,7 @@
 
 .container{
   
-    width: 15%;
+    width: 250px;
     height: 100%;
     background-color: rgb(255, 255, 255);
     border-bottom-left-radius: 15px;
