--- a/src/components/formAreas.module.css
+++ b/src/components/formAreas.module.css
@@ -26,3 +26,48 @@
     padding-left: 0.5rem;
     
 }
+
+
+
+.userContents1{
+    display: flex;
+    justify-content: center;
+    margin: 1rem 0px 1rem 1.75rem;
+    padding-bottom: 0.5rem;
+}
+
+.formLabel1{
+    margin-right: 0.5rem;
+    font-size: 17px;
+    font-weight: 500;
+    width: 45%;
+    padding-bottom: 0.45rem;
+    
+
+}
+
+.formInput1{
+    background-color: rgb(38, 113, 212);
+    border: none;
+    border-radius: 10px;
+    color: aliceblue;
+    font-size: 15px;
+    padding-left: 0.5rem;
+    
+}
+
+.passwordButton{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20px;
+    height: 20px;
+    border-radius: 10px;
+    /* margin-bottom: 10px; */
+    margin-left: 0.5rem;
+    /* border: 1px solid black; */
+}
+
+.passwordButton:hover{
+    cursor: pointer;
+}
