--- a/src/components/UserInfoForm.module.css
+++ b/src/components/UserInfoForm.module.css
@@ -101,3 +101,14 @@
     cursor: pointer;
     box-shadow: 0px 0px 5px black;
 }
+
+/* @media screen and (max-width: 950px){
+    
+    .container{
+        height: 200vh;
+        width: 100vw;
+        flex-direction: column;
+        justify-content:center;
+        align-items: center;
+    }
+} */
