--- a/src/components/Login.module.css
+++ b/src/components/Login.module.css
@@ -5,7 +5,7 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.476);
+    /* background-color: rgba(0, 0, 0, 0.476); */
     backdrop-filter: blur(15px);
 
     display: flex;
@@ -236,6 +236,16 @@ input:hover + .inputTitle{
 input:checked + .inputTitle .icon,
 input:checked + .inputTitle label{
     color:aliceblue !important;
+}
+
+.closeShow{
+    display: none;
+}
+
+.containerBg{
+    background-color: #da0f0f !important;
+    width: 100%;
+    height: 100%;
 }
 
 
