--- a/src/components/Login.module.css
+++ b/src/components/Login.module.css
@@ -140,7 +140,7 @@
     padding-top: 5%;
     width: 70%;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     
 }
 
