--- a/src/screens/teachers/components/Calendar.module.css
+++ b/src/screens/teachers/components/Calendar.module.css
@@ -3,8 +3,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 89vh;
+    /* height: 89vh; */
 }
 .calendarContainer{
     width: 70%;
+}
+
+.timegutterheader{
+    text-align: right;
+  padding: 0.5em;
+  background-color: blue;
 }
