Ders id ile güncelleme fnc.ları oluşturuldu

--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@ background-color: #eeeff2 !important;
 }
 
 .btn-primary{
-  background-color: #0076fa;
+  background-color: #01b671;
   color: aliceblue;
   padding: 0.5rem 1rem;
   border-radius: 15px;
