teacher sayfa hataları düzeltildi, ders oluşturma günleri dışa aktırıldı

--- a/src/components/UserInfos.module.css
+++ b/src/components/UserInfos.module.css
@@ -93,6 +93,12 @@
 
 }
 
+.image{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+
 @keyframes animate-in {
     from {
       opacity: 0;
