derslerimle alakalı buglar düzeltildi, günlerin verileri çekildi

--- a/src/screens/teachers/MyCourses.module.css
+++ b/src/screens/teachers/MyCourses.module.css
@@ -14,3 +14,19 @@
     /* background-color: rgb(240, 248, 255); */
     border-radius: 30px;
 }
+
+.cardContainer{
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    height: fit-content;
+    padding-bottom: 3rem;
+   
+}
+
+.cardInfos{
+    background-color: antiquewhite;
+    display: flex;
+    flex-direction: row;
+    
+}
