Verilen Dersler sayfası oluşturuldu, teacher namede hata var

--- a/src/screens/students/StudentsHome.module.css
+++ b/src/screens/students/StudentsHome.module.css
@@ -6,12 +6,12 @@ body{
 
 .swiperContainer{
 
-   width: 1200px;
+   width: 900px;
    
 }
 
 .swiperContainerOuter{
-    margin: 20px;
+    /* margin: 20px; */
     width: 97%;
     display: flex;
     justify-content: center;
