--- a/src/screens/students/GivenCourses.module.css
+++ b/src/screens/students/GivenCourses.module.css
@@ -13,7 +13,7 @@
     border-radius: 30px;
     font-weight: 500;
     font-size: larger;
-    /* animation: animate-in2 1.5s ease-out forwards;  */
+    animation: animate-in2 1.5s ease-out forwards; 
 }
 
 .marginTop{
@@ -45,15 +45,24 @@
 .titleLine{
     height: 5px;
     border-radius: 30px;
-    width: 98%;
+    width: 35%;
     background-color: #d30f1c;
     margin: 0rem 1rem;
     margin-bottom: 1rem;
-    /* animation: animate-in 1.5s ease-out forwards;  */
+    animation: animate-in 1.5s ease-out forwards; 
 }
 
 .background{
-    /* background-color: #141414; */
+background-image: linear-gradient(270deg, #7b7b7b 0%, #f0f0f0 52%, #7b7b7b 90%);
+
+}
+
+.spinnerContainer{
+  height: 89vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: linear-gradient(270deg, #7b7b7b 0%, #f0f0f0 52%, #7b7b7b 90%);
 }
 
 @keyframes animate-in {
